<resources>
    <string name="app_name">Bloodcellcount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bloodcell_image">BloodCell Image</string>
    <string name="blood_image">Blood_Image</string>
    <string name="num_of_red_blood_cell">Num of Red Blood Cell</string>
    <string name="count">Count</string>
    <string name="blood_image_place_holder">blood_image_place_holder</string>
    <string name="click_here_to_open_your_image">Click Here to Open Your Image</string>
    <string name="bloodcell">bloodcell</string>
    <string name="back_button">Back Button</string>
    <string name="result">Result</string>
    <string name="this_field_will_show_your_image_path_in_your_device">This field will show your image path in your device</string>
    <string name="scan_menu">Scan Menu</string>
    <string name="scan_mode">scan_mode</string>
    <string name="a">adad</string>
    <string name="backbone">Backbone</string>
    <string name="name">name</string>
    <string name="num_of_bloodcell">0</string>
    <string name="login_text">login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="search_anything_here">Search anything here</string>
    <string name="logout">Logout</string>
    <string name="member">Member</string>
    <string name="username">Username</string>
    <string name="_0">0</string>
    <string name="back">Back</string>
    <string name="image_name">Image Name</string>
    <string name="cells">Cells</string>
    <string name="_00">00</string>
    <string name="scan_using_camera">Scan Using Camera</string>
    <string name="scan_new_image_using_nyour_camera">scan new image using\nyour camera</string>
    <string name="open_from_folder">Open From folder</string>
    <string name="open_image_from_your_nlocal_files">Open image from your\nlocal files</string>
    <string name="menu_photo">menu photo</string>
    <string name="change_password">Change</string>
    <string name="cancel">cancel</string>
    <string name="save">Save</string>
    <string name="ordering">Ordering</string>
    <string name="page">Page:</string>
</resources>