<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="4dp"
    android:background="@drawable/background9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    tools:context=".ui.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/background9"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/reem_kufi"
            android:text="@string/num_of_red_blood_cell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65999997" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_finish_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background9"
            android:padding="2dp"
            app:layout_constraintBottom_toTopOf="@+id/blood_cell_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.55">

            <TextView
                android:id="@+id/tv_num_of_blood_cell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@+id/textView33"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bloodcell"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/blood_cell_image_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:clickable="true"
            android:contentDescription="@string/blood_image"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/image_view_place_holder"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_picture"
            app:layout_constraintBottom_toBottomOf="@+id/blood_cell_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/blood_cell_image_view"
            app:layout_constraintTop_toTopOf="@+id/blood_cell_image_view"
            android:contentDescription="@string/blood_image_place_holder" />

        <TextView
            android:id="@+id/tv_blood_image_place_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here_to_open_your_image"
            android:textColor="#CBD5D5"
            app:layout_constraintBottom_toBottomOf="@+id/blood_cell_image_view"
            app:layout_constraintEnd_toEndOf="@+id/image_view_place_holder"
            app:layout_constraintStart_toStartOf="@+id/image_view_place_holder"
            app:layout_constraintTop_toBottomOf="@+id/image_view_place_holder"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btn_count"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:background="@drawable/background9"
        android:fontFamily="@font/reem_kufi"
        android:text="@string/count"
        android:textSize="12sp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.204" />



</androidx.constraintlayout.widget.ConstraintLayout>