<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.scan.ResultFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="344dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="22dp"
                    android:layout_height="59dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/reem_kufi"
                    android:text="@string/back"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/btnBack"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/btnBack"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.56" />

            </androidx.constraintlayout.widget.ConstraintLayout>

           </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="630dp"
        android:background="@color/white"
        android:translationZ="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:id="@+id/view3"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/tv_num_of_blood_cell"
            app:layout_constraintStart_toStartOf="@+id/tv_num_of_blood_cell"
            app:layout_constraintTop_toBottomOf="@+id/tv_num_of_blood_cell" />

        <com.example.bloodcellcount.uxdiinview.UxdiinImageView
            android:id="@+id/blood_cell_image_view"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/background9"
            android:clickable="true"
            android:contentDescription="@string/blood_image"
            android:focusable="true"
            android:radius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_image_name"
            app:layout_constraintVertical_bias="0.0" />



        <TextView
            android:id="@+id/tv_num_of_blood_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/_00"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle=""
            app:layout_constraintBottom_toBottomOf="@+id/tv_backbone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/reem_kufi"
            android:text="@string/cells"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_num_of_blood_cell"
            app:layout_constraintStart_toStartOf="@+id/tv_num_of_blood_cell" />

        <TextView
            android:id="@+id/tv_image_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/image_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_backbone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:background="@drawable/background6_green"
            android:elevation="4dp"
            android:fontFamily="@font/reem_kufi"
            android:gravity="center_vertical|center_horizontal"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:text="@string/backbone"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.928"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blood_cell_image_view"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>