<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:paddingTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="170dp"
            android:layout_height="250dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_main_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/stetoskop" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.16000003">

            <ImageView
                android:id="@+id/iv_poster_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/synapses" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintHorizontal_bias="0.61"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView2"
            app:layout_constraintVertical_bias="0.74">

            <ImageView
                android:id="@+id/iv_poster_tersier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="matrix"
                android:src="@drawable/synapses" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.16000003" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/username_text"
            app:layout_constraintEnd_toEndOf="@+id/tv_login_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_login_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_text" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittextbackground9"
            android:hint="  ex : lol"
            android:padding="5dp"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_login_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_login"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/password_text"
            app:layout_constraintEnd_toEndOf="@+id/tv_login_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_login_text"
            app:layout_constraintTop_toBottomOf="@+id/edt_username" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittextbackground9"
            android:hint="  ex : 123"
            android:padding="5dp"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_login_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:background="@drawable/background6_green"
            android:elevation="4dp"
            android:fontFamily="@font/reem_kufi"
            android:gravity="center_vertical|center_horizontal"
            android:padding="1dp"
            android:text="@string/login_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edt_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edt_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>